--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+server:
+  error:
+    whitelabel:
+      enabled: false
+    path: /error
 spring:
   config:
     import: classpath:config/database.yml
