--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.7.2'
     id 'io.spring.dependency-management' version '1.0.12.RELEASE'
-    id 'org.asciidoctor.convert' version '1.5.8'
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
     id 'java'
 }
 
@@ -10,6 +10,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 configurations {
+    asciidoctorExtensions
     compileOnly {
         extendsFrom annotationProcessor
     }
@@ -36,8 +37,8 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
 
     // Log
-    implementation 'net.logstash.logback:logstash-logback-encoder:7.0'
-    implementation 'ch.qos.logback:logback-core:1.2.7'
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.2'
+    implementation 'ch.qos.logback:logback-core:1.2.11'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
@@ -47,15 +48,41 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 
     // restDoc
-    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+    asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+    testImplementation 'org.springframework.restdocs:spring-restdocs-restassured'
+
+    // h2
+    implementation 'com.h2database:h2:2.1.214'
 }
 
-tasks.named('test') {
+test {
     outputs.dir snippetsDir
     useJUnitPlatform()
 }
 
-tasks.named('asciidoctor') {
-    inputs.dir snippetsDir
+
+asciidoctor {
+    doFirst {
+        delete {
+            file("src/main/resources/static/docs")
+        }
+    }
     dependsOn test
+    configurations 'asciidoctorExtensions'
+    inputs.dir snippetsDir
+
+    sources{
+        include("**/index.adoc")
+    }
+    baseDirFollowsSourceFile()
+}
+
+task copyAsciidoctor(type: Copy) {
+    dependsOn asciidoctor
+    from file("build/docs/asciidoc")
+    into file("src/main/resources/static/docs")
+}
+
+build {
+    dependsOn copyAsciidoctor
 }
