--- a/src/main/resources/config/database.yml
+++ b/src/main/resources/config/database.yml
@@ -17,7 +17,7 @@ spring:
     show-sql: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/ttangtoto?serverTimezone=Asia/Seoul&useSSL=false
+    url: jdbc:mysql://localhost:3307/ttangtoto?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: mysql
 
@@ -44,4 +44,6 @@ spring:
     url: jdbc:h2:mem:ttangtoto;MODE=MySQL;
     username: SA
     password:
-    initialization-mode: always
+  sql:
+    init:
+      mode: always
